# daily-self-regulation-llm

./: .gitignore  DEVELOPMENT_GUIDE.md  README.md  pyproject.toml
llm_engineering/: __init__.py  settings.py
llm_engineering/application/crawlers/: calendar.py  dispatcher.py  google_calendar.py  naver.py  notion.py
llm_engineering/application/feedback/: __init__.py  base.py  document_loader.py
llm_engineering/application/feedback/daily/: __init__.py  generator.py  prompts.py
llm_engineering/application/feedback/monthly/: __init__.py  generator.py  prompts.py
llm_engineering/application/feedback/weekly/: __init__.py  generator.py  metrics.py  prompts.py
llm_engineering/application/networks/: embeddings.py
llm_engineering/application/preprocessing/: __init__.py  base.py  calendar.py  dispatcher.py  embedding_handlers.py  google_calendar.py  naver.py  notion.py  utils.py
llm_engineering/application/prompts/: feedback_prompts.py
llm_engineering/application/rag/: __init__.py  feedback_chain.py  retriever.py
llm_engineering/application/visualization/: __init__.py  daily_report_interactive.py  privacy_utils.py  streamlit_daily_report.py  streamlit_experiment_dashboard.py  streamlit_public_dashboard.py
llm_engineering/domain/: __init__.py  cleaned_documents.py  documents.py  embedded_documents.py  feedback_documents.py  types.py
llm_engineering/domain/base/: nosql.py  vector.py
llm_engineering/infrastructure/: image_store.py
notebooks/: 02_preprocessing_3-level-inference.ipynb  02_preprocessing_refactored.ipynb
pipelines/: __init__.py  crawl.py  data_pipeline.py  embed.py  preprocess.py
steps/: query_custom_data.py
tools/: create_privacy_config.py  run.py  run_agency_classifier.py  run_crawler.py  run_embedding.py  run_embedding_filtered.py  run_feedback.py  run_preprocessing.py
