[tool.poetry]
name = "daily-self-regulation"
version = "0.1.0"
description  = ""
authors = ["eddie"]
license = "x"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
zenml = { version = "0.74.0", extras = ["server"] }
pymongo = "^4.6.2"
click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
numpy = "^1.26.4"
poethepoet = "0.29.0"
datasets = "^3.0.1"
torch = "2.2.2"

# Digital data ETL
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
jmespath = "^1.0.1"
chromedriver-autoinstaller = "^0.6.4"
notion-client = "^2.5.0"

# Feature engineering
qdrant-client = "^1.8.0"
langchain = "^0.2.11"
sentence-transformers = "^3.0.0"

# RAG
langchain-openai = "^0.1.3"
jinja2 = "^3.1.4"
pyyaml = "^6.0.1"
tiktoken = "^0.7.0"
fake-useragent = "^1.5.1"
langchain-community = "^0.2.11"

# Inference
fastapi = ">=0.100,<=0.110"
uvicorn = "^0.30.6"
opik = "^0.2.2"
openpyxl = "^3.1.5"
python-dotenv = "^1.1.1"
pandas = "^2.3.3"
rank-bm25 = "^0.2.2"
streamlit = "^1.39.0"
plotly = "^5.24.0"
google-auth-oauthlib = "^1.2.3"
google-auth-httplib2 = "^0.2.1"
google-api-python-client = "^2.187.0"
google-generativeai = "^0.8.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.7.1"
pytest = "^8.2.2"


[tool.poetry.group.aws.dependencies]
sagemaker = ">=2.232.2"
s3fs = ">2022.3.0"
aws-profile-manager = "^0.7.3"
kubernetes = "^30.1.0"
sagemaker-huggingface-inference-toolkit = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ----------------------------------
# --- Poe the Poet Configuration ---
# ----------------------------------

[tool.poe.tasks]
# Crawlers
[tool.poe.tasks.crawl-naver]
help = "Run the Naver crawler. e.g. poe crawl-naver --first-name Eddie --last-name Yun -- --blog-id 'my-id'"
cmd = "poetry run python -m tools.run_crawler --name naver --user-first-name $first_name --user-last-name $last_name"
args = [
    {name = "first_name", options = ["--first-name"], help = "User's first name"},
    {name = "last_name", options = ["--last-name"], help = "User's last name"},
]

[tool.poe.tasks.crawl-calendar]
help = "Run the Calendar crawler. e.g. poe crawl-calendar --first-name Eddie --last-name Yun"
cmd = "poetry run python -m tools.run_crawler --name calendar --user-first-name $first_name --user-last-name $last_name --directory-path 'llm_engineering/application/crawlers/data'"
args = [
    {name = "first_name", options = ["--first-name"], help = "User's first name"},
    {name = "last_name", options = ["--last-name"], help = "User's last name"},
]

[tool.poe.tasks.crawl-notion]
help = "Run the Notion crawler. e.g. poe crawl-notion --first-name Eddie --last-name Yun"
cmd = "poetry run python -m tools.run_crawler --name notion --user-first-name $first_name --user-last-name $last_name"
args = [
    {name = "first_name", options = ["--first-name"], help = "User's first name"},
    {name = "last_name", options = ["--last-name"], help = "User's last name"},
]

[tool.poe.tasks.crawl-google-calendar]
help = "Run the Google Calendar crawler. e.g. poe crawl-google-calendar --first-name Eddie --last-name Yun"
cmd = "poetry run python -m tools.run_crawler --name google_calendar --user-first-name $first_name --user-last-name $last_name"
args = [
    {name = "first_name", options = ["--first-name"], help = "User's first name"},
    {name = "last_name", options = ["--last-name"], help = "User's last name"},
]

# Preprocessing
[tool.poe.tasks.preprocess]
help = "Run incremental preprocessing (changed documents only, no save)"
cmd = "poetry run python -m tools.run_preprocessing"

[tool.poe.tasks.preprocess-save]
help = "Run incremental preprocessing and save to MongoDB"
cmd = "poetry run python -m tools.run_preprocessing --save"

# Agency Classification
[tool.poe.tasks.classify-agency-daily]
help = "Classify agency roles for a specific day. e.g. poe classify-agency-daily --date 2025-10-20"
script = "tools.run_agency_classifier:main"

[tool.poe.tasks.classify-agency-weekly]
help = "Classify agency roles for a week. e.g. poe classify-agency-weekly --start-date 2025-10-14"
script = "tools.run_agency_classifier:main"

[tool.poe.tasks.classify-agency-monthly]
help = "Classify agency roles for a month (parallel by default). e.g. poe classify-agency-monthly --year 2025 --month 10"
script = "tools.run_agency_classifier:main"

[tool.poe.tasks.classify-agency]
help = "Run agency role classifier (interactive). e.g. poe classify-agency monthly --year 2025 --month 10 --parallel"
cmd = "poetry run python -m tools.run_agency_classifier"

[tool.poe.tasks.preprocess-full]
help = "Run full preprocessing (all documents, no save)"
cmd = "poetry run python -m tools.run_preprocessing --full"

[tool.poe.tasks.preprocess-full-save]
help = "Run full preprocessing and save to MongoDB"
cmd = "poetry run python -m tools.run_preprocessing --full --save"

[tool.poe.tasks.run-preprocessing]
help = "[DEPRECATED] Use 'poe preprocess' or 'poe preprocess-save' instead"
cmd = "poetry run python -m tools.run_preprocessing"

[tool.poe.tasks.local-docker-infrastructure-up]
cmd = "docker compose up -d"

[tool.poe.tasks.local-docker-infrastructure-down]
cmd = "docker compose stop"

[tool.poe.tasks.local-zenml-server-down]
cmd = "poetry run zenml logout --local"

[tool.poe.tasks.local-infrastructure-up]
sequence = [
    "local-docker-infrastructure-up",
    "local-zenml-server-down",
    "local-zenml-server-up",
]

[tool.poe.tasks.local-infrastructure-down]
sequence = [
    "local-docker-infrastructure-down",
    "local-zenml-server-down",
]

[tool.poe.tasks.set-local-stack]
cmd = "poetry run zenml stack set default"

[tool.poe.tasks.set-aws-stack]
cmd = "poetry run zenml stack set aws-stack"

[tool.poe.tasks.set-asynchronous-runs]
cmd = "poetry run zenml orchestrator update aws-stack --synchronous=False"

[tool.poe.tasks.zenml-server-disconnect]
cmd = "poetry run zenml disconnect"

## Settings
[tool.poe.tasks.export-settings-to-zenml]
cmd = "poetry run python -m tools.run --export-settings"

[tool.poe.tasks.delete-settings-zenml]
cmd = "poetry run zenml secret delete settings"

## SageMaker
[tool.poe.tasks.create-sagemaker-role]
cmd = "poetry run python -m llm_engineering.infrastructure.aws.roles.create_sagemaker_role"

[tool.poe.tasks.create-sagemaker-execution-role]
cmd = "poetry run python -m llm_engineering.infrastructure.aws.roles.create_execution_role"

[tool.poe.tasks.deploy-inference-endpoint]
cmd = "poetry run python -m llm_engineering.infrastructure.aws.deploy.huggingface.run"

[tool.poe.tasks.test-sagemaker-endpoint]
cmd = "poetry run python -m llm_engineering.model.inference.test"

[tool.poe.tasks.delete-inference-endpoint]
cmd = "poetry run python -m llm_engineering.infrastructure.aws.deploy.delete_sagemaker_endpoint"

## Docker
[tool.poe.tasks.build-docker-image]
cmd = "docker buildx build --platform linux/amd64 -t llmtwin -f Dockerfile ."

[tool.poe.tasks.run-docker-end-to-end-data-pipeline]
cmd = "docker run --rm --network host --shm-size=2g --env-file .env llmtwin poetry poe --no-cache --run-end-to-end-data"

[tool.poe.tasks.bash-docker-container]
cmd = "docker run --rm -it --network host --env-file .env llmtwin bash"

# QA
[tool.poe.tasks.lint-check]
cmd = "poetry run ruff check ."

[tool.poe.tasks.format-check]
cmd = "poetry run ruff format --check ."

[tool.poe.tasks.lint-check-docker]
cmd = "sh -c 'docker run --rm -i hadolint/hadolint < Dockerfile'"

[tool.poe.tasks.gitleaks-check]
cmd = "docker run -v .:/src zricethezav/gitleaks:latest dir /src/llm_engineering"

[tool.poe.tasks.lint-fix]
cmd = "poetry run ruff check --fix ."

[tool.poe.tasks.format-fix]
cmd = "poetry run ruff format ."

[tool.poe.tasks.local-zenml-server-up]
control.expr = "sys.platform"

[[tool.poe.tasks.local-zenml-server-up.switch]]
case = "darwin"
env = { OBJC_DISABLE_INITIALIZE_FORK_SAFETY = "YES" }
cmd = "poetry run zenml login --local"

[[tool.poe.tasks.local-zenml-server-up.switch]]
case = "win32"
cmd = "poetry run zenml login --local --blocking"

[[tool.poe.tasks.local-zenml-server-up.switch]]
cmd = "poetry run zenml login --local"

# RAG Query
[tool.poe.tasks.query]
help = "Ask a question to the RAG system. e.g. poe query -q '오늘 뭐 했어?'"
script = "tools.run_rag_query:main"

[tool.poe.tasks.query-interactive]
help = "Interactive RAG query mode. e.g. poe query-interactive"
cmd = "poetry run python -m tools.run_rag_query --interactive --verbose"

[tool.poe.tasks.chatbot]
help = "Launch the Streamlit chatbot frontend. e.g. poe chatbot"
cmd = "poetry run streamlit run llm_engineering/application/rag/streamlit_app.py --server.address 0.0.0.0 --server.port 8501"
env = { PYTHONPATH = "${PWD}" }

[tool.poe.tasks.daily-report]
help = "Launch the daily activity report dashboard. e.g. poe daily-report"
cmd = "poetry run streamlit run llm_engineering/application/visualization/streamlit_daily_report.py --server.address 0.0.0.0 --server.port 8504"
env = { PYTHONPATH = "${PWD}" }

[tool.poe.tasks.public-dashboard]
help = "Launch the public activity report dashboard (privacy-protected). e.g. poe public-dashboard"
cmd = "poetry run streamlit run llm_engineering/application/visualization/streamlit_public_dashboard.py --server.address 0.0.0.0 --server.port 8502"
env = { PYTHONPATH = "${PWD}" }

[tool.poe.tasks.experiment-dashboard]
help = "Launch the experiment dashboard (model testing, privacy toggle). e.g. poe experiment-dashboard"
cmd = "poetry run streamlit run llm_engineering/application/visualization/streamlit_experiment_dashboard.py --server.address 0.0.0.0 --server.port 8503"
env = { PYTHONPATH = "${PWD}" }

# In-Context Feedback Services
[tool.poe.tasks.feedback-daily]
help = "Generate daily feedback (in-context). e.g. poe feedback-daily --date 2025-10-20"
cmd = "poetry run python tools/run_feedback.py daily"

[tool.poe.tasks.feedback-weekly]
help = "Generate weekly feedback. e.g. poe feedback-weekly --start-date 2025-10-14"
cmd = "poetry run python tools/run_feedback.py weekly"

[tool.poe.tasks.feedback-monthly]
help = "Generate monthly feedback. e.g. poe feedback-monthly --year 2025 --month 10"
cmd = "poetry run python tools/run_feedback.py monthly"

# ===========================================
# Pipelines (크롤링 + 전처리 + 임베딩 통합)
# ===========================================

[tool.poe.tasks.pipeline-etl]
help = "Run ETL pipeline (crawling + preprocessing). e.g. poe pipeline-etl --first-name Eddie --last-name Yun"
cmd = "poetry run python -m tools.run --run-etl --first-name $first_name --last-name $last_name"
args = [
    {name = "first_name", options = ["--first-name"], help = "User's first name", required = true},
    {name = "last_name", options = ["--last-name"], help = "User's last name", required = true},
]

[tool.poe.tasks.pipeline-end-to-end]
help = "Run End-to-End pipeline (crawling + preprocessing + embedding). e.g. poe pipeline-end-to-end --first-name Eddie --last-name Yun"
cmd = "poetry run python -m tools.run --run-end-to-end --first-name $first_name --last-name $last_name"
args = [
    {name = "first_name", options = ["--first-name"], help = "User's first name", required = true},
    {name = "last_name", options = ["--last-name"], help = "User's last name", required = true},
]

[tool.poe.tasks.pipeline-preprocessing]
help = "Run preprocessing step only (incremental by default)"
cmd = "poetry run python -m tools.run --run-preprocessing"

[tool.poe.tasks.pipeline-embedding]
help = "Run embedding step only. e.g. poe pipeline-embedding --source calendar"
cmd = "poetry run python -m tools.run --run-embedding"

[tool.poe.tasks.run-pipeline]
help = "Run pipelines with custom options. e.g. poe run-pipeline --run-etl --first-name Eddie --last-name Yun --skip-notion"
cmd = "poetry run python -m tools.run"

# Tests
[tool.poe.tasks.test]
cmd = "poetry run pytest tests/"
env = { ENV_FILE = ".env.testing" }
